--- a/miniprogram/custom-tab-bar/index.less
+++ b/miniprogram/custom-tab-bar/index.less
@@ -1,6 +1,7 @@
 @import '../styles/theme.less';
-.custom-tabbar {
-  position: fixed;
+.tab-bar {
+  pointer-events: auto;
+  position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
