--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -1,17 +1,32 @@
-.bg{
+.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   height: 545rpx;
   background-image: url('https://7a68-zhuomin-1gqebsmr805ac1ca-1257151041.tcb.qcloud.la/bg.jpeg?sign=ccfd8e23b70f3e5f0c347de67a6a23dc&t=1737041224');
   background-size: 150% 150%;
-  background-position:bottom center;
+  background-position: bottom center;
+  z-index: -1;
 }
+
+
 .container {
-  min-height: 100vh;
-  padding-bottom: calc(110rpx + env(safe-area-inset-bottom));
+  padding-top: 200rpx;
+  padding-bottom: 200rpx;
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  .header {
+    padding-left: 50rpx;
+    font-size: 50rpx;
+    color: #fff;
+  }
+}
+
+.schedule-container {
+  margin:0 34rpx;
+  background-color: #3827FF;
+  color: #fff;
 }
 
 .userinfo {
