--- a/miniprogram/components/scheduleItem/index.less
+++ b/miniprogram/components/scheduleItem/index.less
@@ -5,14 +5,14 @@
   background: #fff;
   border-radius: 16rpx;
   margin-bottom: 20rpx;
-  
+
   .title {
     font-size: 32rpx;
-    color: #333;
-    font-weight: 500;
+    color: #000;
+    font-weight: 600;
     margin-bottom: 12rpx;
   }
-  
+
   .time {
     font-size: 28rpx;
     color: #999;
@@ -20,17 +20,18 @@
 
   // 不同类型日程的样式
   &.schedule-coral {
-    background: rgba(255, 127, 80, 0.1);
-    border-left: 8rpx solid #FF7F50;
+    background: #FFEFE7;
+    border-left: 8rpx solid #F6945D;
+    ;
   }
-  
+
   &.schedule-blue {
-    background: rgba(65, 105, 225, 0.1);
-    border-left: 8rpx solid #4169E1;
+    background: #D3E4F4;
+    border-left: 8rpx solid #3374C7;
   }
-  
+
   &.schedule-purple {
-    background: rgba(147, 112, 219, 0.1);
-    border-left: 8rpx solid #9370DB;
+    background:#EDDFEF;
+    border-left: 8rpx solid #821886;
   }
-} 
+}
