--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -24,9 +24,28 @@
 }
 
 .schedule-container {
+  padding: 40rpx;
   margin:0 34rpx;
   background-color: #3827FF;
   color: #fff;
+  border-radius: 40rpx;
+  .top-area{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20rpx;
+    .top-right{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20rpx;
+      font-size: 30rpx;
+      image{
+        width: 20rpx;
+        height: 20rpx;
+      }
+    }
+  }
 }
 
 .userinfo {
