--- a/miniprogram/components/scheduleItem/index.less
+++ b/miniprogram/components/scheduleItem/index.less
@@ -6,7 +6,7 @@
   border-radius: 16rpx;
   margin-bottom: 20rpx;
 
-  .title {
+  .content{
     font-size: 32rpx;
     color: #000;
     font-weight: 600;
