fix page header

--- a/miniprogram/pages/connectUs/connectUs.less
+++ b/miniprogram/pages/connectUs/connectUs.less
@@ -1,4 +1,29 @@
+
+
 @import '../../styles/theme.less';
+
+.header-area {
+  position: relative;
+  height: 350rpx;
+
+  .header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 50rpx;
+    color: #000;
+    position: absolute;
+    bottom: 40rpx;
+    left: 0;
+    right: 0;
+
+    .header-left {
+      font-size: 50rpx;
+
+    }
+
+  }
+}
 
 .connect-us {
   // 原有的样式...
