--- a/miniprogram/pages/connectUs/connectUs.wxml
+++ b/miniprogram/pages/connectUs/connectUs.wxml
@@ -1,3 +1,8 @@
-<view class="container">
+<view class="header-area" hover-class="none" hover-stop-propagation="false">
+    <view class="header-container">
+      <view class="header-left" hover-class="none" hover-stop-propagation="false">
+        联络客服
+      </view>
   
-</view> 
+    </view>
+  </view>
