--- a/miniprogram/pages/healthRecords/healthRecords.less
+++ b/miniprogram/pages/healthRecords/healthRecords.less
@@ -2,31 +2,25 @@ page {
   background-color: #F5F7F8;
 }
 
-.bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 340rpx;
+
+.header-area {
   background-image: url('https://7a68-zhuomin-1gqebsmr805ac1ca-1257151041.tcb.qcloud.la/bg.jpeg?sign=ccfd8e23b70f3e5f0c347de67a6a23dc&t=1737041224');
-  background-size: 100%;
   background-position: bottom center;
-  z-index: -1;
-}
+  background-size: 100%;
+  position: relative;
+  bottom: 0;
+  height: 350rpx;
 
-
-.container {
-  padding-top: 240rpx;
-  padding-bottom: 200rpx;
-  box-sizing: border-box;
-
-  .header {
+  .header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding:0 50rpx;
+    padding: 0 50rpx;
     color: #fff;
+    position: absolute;
+    bottom: 40rpx;
+    left: 0;
+    right: 0;
 
     .header-left {
       font-size: 50rpx;
@@ -34,8 +28,9 @@ page {
     }
 
     .header-right {
-      
+
       font-size: 25rpx;
+
       image {
         margin-right: 10rpx;
         width: 24rpx;
@@ -44,6 +39,12 @@ page {
 
     }
   }
+}
+
+.container {
+  padding-bottom: 200rpx;
+  box-sizing: border-box;
+
 
   .card {
     margin: 40rpx;
