--- a/miniprogram/components/currentWeek/index.less
+++ b/miniprogram/components/currentWeek/index.less
@@ -1,50 +1,46 @@
 @import "../../styles/theme.less";
 
 .current-week {
-  width: 100%;
-  padding: 20rpx;
-  
+  padding: 20rpx 40rpx;
+
   .week-container {
     display: flex;
     justify-content: space-between;
     padding: 0 10rpx;
   }
-  
+
   .week-day {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 14.28%;
-    padding: 5rpx 0;
   }
-  
-  .day-name {
-    font-size: 24rpx;
-    color: @secondary-color;
-    margin-bottom: 8rpx;
-  }
-  
+
   .day-number {
-    font-size: 28rpx;
-    color: @primary-color;
+    font-weight:700;
+    font-size: 30rpx;
+    color: #fff;
+    width: 44rpx;
+    height: 44rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
-  
+
   .today {
-    background-color: @highlight-bg;
-    border-radius: 8rpx;
+    background-color: #fff;
+    border-radius: 100%;
+    color: #4A3AFF;
   }
-  
+
   .other-month {
-    color: @disabled-color;
+    color: rgba(255, 255, 255, 0.3);
   }
-  
+
   .target {
-    background-color: @highlight-color;
-    border-radius: 8rpx;
-    
+
     .day-name,
     .day-number {
-      color: #fff;
+      color: #4A3AFF;
     }
   }
-} 
+}
