--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -1,17 +1,54 @@
 page{
   background-color: #F5F7F8;
 }
-.bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 545rpx;
+.header-area{
+  height: 614rpx;
   background-image: url('https://7a68-zhuomin-1gqebsmr805ac1ca-1257151041.tcb.qcloud.la/bg.jpeg?sign=ccfd8e23b70f3e5f0c347de67a6a23dc&t=1737041224');
   background-size: 150% 150%;
   background-position: bottom center;
-  z-index: -1;
+  position: relative;
+
+  .header {
+    position: absolute;
+    top: 356rpx;
+    transform: translateY(-100%);
+    left: 0;
+    right: 0;
+    padding: 0 60rpx;
+    font-size: 60rpx;
+    color: #fff;
+  }
+  .schedule-container {
+    position: absolute;
+    top: 406rpx;
+    left: 0;
+    right: 0;
+
+    padding: 30rpx; 
+    margin:0 30rpx;
+    background-color: #3827FF;
+    color: #fff;
+    border-radius: 32rpx;
+    display:flex;
+    flex-direction: column;
+    gap: 30rpx;
+    .top-area{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .top-right{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 4rpx;
+        font-size: 26rpx;
+        image{
+          width: 20rpx;
+          height: 20rpx;
+        }
+      }
+    }
+  }
 }
 
 
@@ -19,37 +56,9 @@ page{
   padding-top: 200rpx;
   padding-bottom: 200rpx;
   box-sizing: border-box;
-  .header {
-    padding-left: 50rpx;
-    font-size: 50rpx;
-    color: #fff;
-  }
 }
 
-.schedule-container {
-  padding: 40rpx;
-  margin:0 34rpx;
-  background-color: #3827FF;
-  color: #fff;
-  border-radius: 40rpx;
-  .top-area{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20rpx;
-    .top-right{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 20rpx;
-      font-size: 30rpx;
-      image{
-        width: 20rpx;
-        height: 20rpx;
-      }
-    }
-  }
-}
+
 
 .userinfo {
   display: flex;
