--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -53,42 +53,15 @@ page{
 
 
 .container {
-  padding-top: 200rpx;
+  padding-top: 210rpx;
   padding-bottom: 200rpx;
   box-sizing: border-box;
 }
 
 
 
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 40rpx;
-
-  &-avatar {
-    width: 128rpx;
-    height: 128rpx;
-    border-radius: 50%;
-    margin-bottom: 20rpx;
-  }
-
-  &-nickname {
-    color: #333;
-    font-size: 32rpx;
-  }
-}
-
-.usermotto {
-  margin-top: 200rpx;
-
-  .user-motto {
-    color: #333;
-  }
-}
-
 .purchased-services {
-  margin: 40rpx 34rpx;
+  padding: 0 30rpx;
   
   .title {
     font-size: 34rpx;
