--- a/miniprogram/components/healthList/index.less
+++ b/miniprogram/components/healthList/index.less
@@ -1,33 +1,29 @@
 .health-list {
-  margin: 30rpx;
+  padding: 0 60rpx;
   border-radius: 20rpx;
-  padding: 20rpx;
   
   .list-title {
-    font-size: 36rpx;
-    font-weight: bold;
+    font-size: 44rpx;
+    font-weight: 400;
     color: #333;
-    padding: 20rpx;
-    border-bottom: 3px solid #94A0A1;
+    border-bottom: 3rpx solid #94A0A1;
+    padding: 20rpx 0;
   }
   
   .list-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30rpx 20rpx;
+    padding: 20rpx 0;
     border-bottom: 1px solid #D4DCDD;
     
-    &:last-child {
-      border-bottom: none;
-    }
-    
     .item-left {
-      font-size: 32rpx;
-      color: #333;
+      font-size: 30rpx;
+      color: #000;
+      font-weight: 600;
       .item-time{
       color: #999;
-      font-size: 28rpx;
+      font-size: 20rpx;
 
       }
     }
