--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -61,41 +61,51 @@ page{
 
 
 .purchased-services {
-  padding: 0 30rpx;
+  margin-top: 40rpx;
+  padding: 0 60rpx;
+  display: flex;
+  flex-direction: column;
+  gap: 20rpx;
+  
   
   .title {
-    font-size: 34rpx;
-    font-weight: 500;
-    color: #333;
-    margin-bottom: 20rpx;
+    font-size: 44rpx;
+    font-weight:400;
+    color: #000;
   }
   
   .service-list {
+    display: flex;
+    flex-direction: column;
+    gap: 30rpx;
     .service-item {
       display: flex;
-      align-items: center;
+      align-items:flex-start;
       background: #fff;
-      padding: 20rpx;
-      border-radius: 16rpx;
-      margin-bottom: 20rpx;
+      border-radius: 12rpx;
+      padding: 30rpx;
+      gap: 20rpx;
       
       .service-icon {
-        width: 100rpx;
-        height: 100rpx;
-        margin-right: 20rpx;
-        border-radius: 16rpx;
+        flex-shrink: 0;
+        width: 180rpx;
+        height: 180rpx;
+        border-radius: 7rpx;
       }
       
       .service-info {
-        flex: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 10rpx;
         .service-name {
-          font-size: 32rpx;
-          color: #333;
-          margin-bottom: 8rpx;
+          font-size: 30rpx;
+          color: #000;
+          line-height: 42rpx;
+          font-weight: 600;
         }
         .service-desc {
-          font-size: 26rpx;
-          color: #666;
+          font-size: 24rpx;
+          color: #000;
         }
       }
     }
