--- a/miniprogram/pages/healthRecords/healthRecords.less
+++ b/miniprogram/pages/healthRecords/healthRecords.less
@@ -9,32 +9,34 @@ page {
   background-size: 100%;
   position: relative;
   bottom: 0;
-  height: 350rpx;
+  height: 300rpx;
 
   .header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 50rpx;
+    padding: 20rpx 60rpx;
     color: #fff;
     position: absolute;
-    bottom: 40rpx;
+    bottom: 0rpx;
     left: 0;
     right: 0;
 
     .header-left {
-      font-size: 50rpx;
-
+      font-size: 60rpx;
+      font-weight: 400;
     }
 
     .header-right {
+      display: flex;
+      align-items: center;
+      gap: 10rpx;
 
-      font-size: 25rpx;
+      font-size: 28rpx;
 
       image {
-        margin-right: 10rpx;
-        width: 24rpx;
-        height: 24rpx;
+        width: 31rpx;
+        height: 31rpx;
       }
 
     }
@@ -44,23 +46,30 @@ page {
 .container {
   padding-bottom: 200rpx;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  margin-top: 30rpx;
+  gap: 30rpx;
 
 
   .card {
-    margin: 40rpx;
-    padding: 40rpx;
+    padding: 30rpx 60rpx;
     background: #FFFFFF;
     border-radius: 20rpx;
-    box-shadow: 0 4rpx 20rpx rgba(0, 0, 0, 0.06);
+    display: flex;
+    flex-direction: column;
+    gap: 12rpx;
 
     &.medical-info {
       margin-top: 20rpx;
 
       .title {
-        font-size: 32rpx;
-        font-weight: 500;
-        color: #333333;
-        margin-bottom: 30rpx;
+        font-size: 44rpx;
+        font-weight: 400;
+        line-height: 60rpx;
+        color: #000;
+        border-bottom: 4rpx solid #D4DCDD;
+        padding: 10rpx 0;
       }
     }
 
@@ -69,20 +78,20 @@ page {
       justify-content: space-between;
       align-items: center;
       padding: 20rpx 0;
-      border-bottom: 2rpx solid #F5F7F8;
+      border-bottom: 2rpx solid #D4DCDD;
 
       &:last-child {
         border-bottom: none;
       }
 
       .label {
-        color: #999999;
-        font-size: 28rpx;
+        color: #000;
+        font-size: 30rpx;
       }
 
       .value {
-        color: #333333;
-        font-size: 28rpx;
+        color: #000;
+        font-size: 30rpx;
       }
     }
   }
