--- a/miniprogram/pages/connectUs/connectUs.less
+++ b/miniprogram/pages/connectUs/connectUs.less
@@ -1,27 +1,29 @@
 
 
 @import '../../styles/theme.less';
-
 .header-area {
+  background-image: url('https://7a68-zhuomin-1gqebsmr805ac1ca-1257151041.tcb.qcloud.la/bg.jpeg?sign=50b2a9efb4fe17efcc3f47b117afef26&t=1737551729');
+  background-position: bottom center;
+  background-size: 100%;
   position: relative;
-  height: 350rpx;
+  bottom: 0;
+  height: 300rpx;
 
   .header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 50rpx;
-    color: #000;
+    padding: 20rpx 60rpx;
+    color: #fff;
     position: absolute;
-    bottom: 40rpx;
+    bottom: 0rpx;
     left: 0;
     right: 0;
 
     .header-left {
-      font-size: 50rpx;
-
+      font-size: 60rpx;
+      font-weight: 400;
     }
-
   }
 }
 
