--- a/miniprogram/pages/schedule/schedule.less
+++ b/miniprogram/pages/schedule/schedule.less
@@ -1,23 +1,28 @@
 .schedule-container {
-  padding: 20rpx;
+  box-sizing: border-box;
   background-color: #3827FF;
   min-height: 100vh;
   
   .schedule-header {
-    padding: 20rpx;
+    padding: 20rpx 60rpx;
     
     .header-title {
-      font-size: 36rpx;
+      font-size: 60rpx;
       color: #fff;
-      font-weight: bold;
+      font-weight:400;
     }
   }
   .calendar-area {
-    padding: 40rpx;
+    padding: 30rpx 60rpx;
   }
 
   .schedule-list {
-    padding: 20rpx;
+    margin: 30rpx;
+    display: flex;
+    flex-direction: column;
+    gap: 25rpx;
+    padding: 30rpx;
     background-color: #fff;
+    border-radius:  20rpx 20rpx 36rpx 36rpx;
   }
 } 
