--- a/miniprogram/components/calendar/index.wxss
+++ b/miniprogram/components/calendar/index.wxss
@@ -68,6 +68,8 @@
 /* 日历操作栏 */
 
 .handle {
+    display: flex;
+    justify-content: center;
     height: 80rpx;
 }
 
@@ -78,6 +80,8 @@
 
 .date-in-handle {
     height: 80rpx;
+    width: 311rpx;
+    font-size: 43rpx;
 }
 
 /* 星期栏 */
@@ -113,8 +117,8 @@
     height: 55rpx;
     text-align: center;
     line-height: 55rpx;
-    font-size: 26rpx;
-    font-weight: 200;
+    font-size: 33rpx;
+    font-weight: 700;
     border-radius: 50%;
     transition: all 0.3s;
     animation-name: choosed;
