--- a/miniprogram/components/calendar/theme/theme-default.wxss
+++ b/miniprogram/components/calendar/theme/theme-default.wxss
@@ -5,7 +5,7 @@
 .default_weekend-color,
 .default_handle-color,
 .default_week-color {
-    color: #ff629a;
+    color: #fff;
 }
 
 .default_today {
@@ -29,11 +29,11 @@
 
 .default_prev-month-date,
 .default_next-month-date {
-    color: #e2e2e2;
+    color: rgba(255, 255, 255, 0.3);
 }
 
 .default_normal-date {
-    color: #88d2ac;
+    color: #fff;
 }
 
 .default_todo-circle {
