--- a/miniprogram/components/calendar/index.wxml
+++ b/miniprogram/components/calendar/index.wxml
@@ -40,9 +40,8 @@
                 </view>
                 <view
                   wx:if="{{item.showTodoLabel && !calendar.todoLabelCircle}}"
-                  class="{{item.todoText ? 'date-desc' : config.theme + '_todo-dot todo-dot'}} {{config.showLunar ? config.theme + '_date-desc-lunar' : ''}} {{calendar.todoLabelPos === 'bottom' ? 'date-desc-bottom todo-dot-bottom' : 'date-desc-top todo-dot-top'}} {{calendar.showLabelAlways && item.choosed && calendar.todoLabelPos === 'bottom' ? 'date-desc-bottom-always todo-dot-bottom-always' : ''}} {{calendar.showLabelAlways && item.choosed && calendar.todoLabelPos === 'top' ? 'date-desc-top-always todo-dot-top-always' : ''}}"
-                  style="background-color: {{item.todoText ? '' : item.color || calendar.todoLabelColor}}; color: {{item.color}}">
-                    {{item.todoText}}
+                  class="{{item.todoText ? 'date-desc' : config.theme + '_todo-dot todo-dot'}} {{config.showLunar ? config.theme + '_date-desc-lunar' : ''}}"
+                  style="background-color: {{item.color || calendar.todoLabelColor}}">
                 </view>
           </view>
         </view>
