--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -3,8 +3,8 @@ page{
 }
 .header-area{
   height: 614rpx;
-  background-image: url('https://7a68-zhuomin-1gqebsmr805ac1ca-1257151041.tcb.qcloud.la/bg.jpeg?sign=50b2a9efb4fe17efcc3f47b117afef26&t=1737551729');
-  background-size: 150% 150%;
+  background-image: url('https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/bg.jpeg?sign=68cdc8ccab13724d9f6513bb6a45a8ab&t=1740660168');
+  background-size: 100%;
   background-position: bottom center;
   position: relative;
 
