--- a/miniprogram/pages/connectUs/connectUs.less
+++ b/miniprogram/pages/connectUs/connectUs.less
@@ -1,8 +1,7 @@
-
-
 @import '../../styles/theme.less';
+
 .header-area {
-  background-image: url('https://7a68-zhuomin-1gqebsmr805ac1ca-1257151041.tcb.qcloud.la/bg.jpeg?sign=50b2a9efb4fe17efcc3f47b117afef26&t=1737551729');
+  background-image: url('https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/bg.jpeg?sign=d3381bf0a834bc64aa829e734be04a5b&t=1740662788');
   background-position: bottom center;
   background-size: 100%;
   position: relative;
@@ -28,14 +27,135 @@
 }
 
 .connect-us {
-  // 原有的样式...
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   .contact-btn {
+    margin-top: 300rpx;
     background-color: @primary-color;
     color: white;
+    width: 502rpx;
+    height: 105rpx;
+    background-color: #159A00;
+    border-radius: 13rpx;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32rpx;
+    font-weight: 500;
   }
-  
+
   .contact-info {
     color: @text-secondary;
   }
-} 
+}
+
+.auth-container {
+  padding: 40rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30rpx;
+}
+
+.auth-btn {
+  width: 80%;
+  height: 88rpx;
+  line-height: 88rpx;
+  background: #3827FF;
+  color: #fff;
+  border-radius: 44rpx;
+  font-size: 32rpx;
+}
+
+.avatar-wrapper {
+  padding: 0;
+  width: 120rpx;
+  height: 120rpx;
+  border-radius: 50%;
+  background: transparent;
+}
+
+.avatar-wrapper::after {
+  border: none;
+}
+
+.avatar {
+  width: 120rpx;
+  height: 120rpx;
+  border-radius: 50%;
+}
+
+.nickname-input {
+  width: 80%;
+  padding: 20rpx;
+  background: #fff;
+  border-radius: 8rpx;
+  font-size: 28rpx;
+}
+
+.mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.auth-modal {
+  width: 80%;
+  background: #fff;
+  border-radius: 20rpx;
+  padding: 40rpx;
+  box-sizing: border-box;
+}
+
+.modal-title {
+  font-size: 36rpx;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 40rpx;
+}
+
+.modal-content {
+  font-size: 28rpx;
+  color: #666;
+  margin-bottom: 40rpx;
+}
+
+.auth-item {
+  margin: 20rpx 0;
+  color: #333;
+}
+
+.auth-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 20rpx;
+}
+
+.phone-btn {
+  width: 100%;
+  height: 88rpx;
+  line-height: 88rpx;
+  background: #3827FF;
+  color: #fff;
+  border-radius: 44rpx;
+  font-size: 32rpx;
+}
+
+.nickname-input {
+  width: 100%;
+  height: 88rpx;
+  line-height: 88rpx;
+  border: 2rpx solid #ddd;
+  border-radius: 44rpx;
+  padding: 0 30rpx;
+  box-sizing: border-box;
+  font-size: 28rpx;
+}
