--- a/miniprogram/pages/product/product.less
+++ b/miniprogram/pages/product/product.less
@@ -1,6 +1,10 @@
-
 @import '../../styles/theme.less';
 
+.container {
+  min-height: 100vh;
+  padding-bottom: calc(110rpx + env(safe-area-inset-bottom));
+  box-sizing: border-box;
+  background: #333;}
 
 .header-area {
   position: relative;
@@ -16,33 +20,105 @@
     bottom: 40rpx;
     left: 0;
     right: 0;
+    color: #fff;
 
     .header-left {
       font-size: 50rpx;
-
     }
-
   }
 }
 
-.container {
-  min-height: 100vh;
-  padding-bottom: calc(110rpx + env(safe-area-inset-bottom));
+.bg1{
+  background: #159A00;
+}
+
+.bg2{
+  background: #AB8014;
+}
+
+.bg3{
+  background: #1786B6;
+}
+
+.bg4{
+  background: #4A3AFF;
+}
+
+
+
+.product-list-area {
+  width: 100%;
+  padding: 30rpx;
   box-sizing: border-box;
-  background: #f6f6f6;
+  .area-title {
+    font-size: 40rpx;
+    font-weight:400;
+    color: #fff;
+    margin-bottom: 40rpx;
+  }
 }
 
 .product-list {
   width: 100%;
-  padding: 20rpx;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 20rpx;
+}
+
+.product-item {
+  border-radius:30rpx;
+  padding: 30rpx;
 }
 
 .product-container {
+  display: flex;
+  flex-direction: column;
   .product-title {
-    color: @text-primary;
+    font-size: 40rpx;
+    font-weight: 400;
+    color: #fff;
+    margin-bottom: 20rpx;
   }
   
-  .price {
-    color: @primary-color;
+  .product-desc {
+    font-size: 26rpx;
+    font-weight: 400;
+    color: #fff;
+    margin-bottom: 40rpx;
+  }
+
+  .price-row {
+    background: #fff;
+    color: #353535;
+    display: inline-flex;
+    justify-content:flex-start;
+    align-items:center;
+    padding: 8rpx 29rpx;
+    border-radius: 100rpx;
+
+    .price-label {
+      line-height: 1;
+      font-size: 24rpx;
+      font-weight: 400;
+    }
+
+    .price-split {
+      line-height: 1;
+      font-size: 26rpx;
+      font-weight: 400;
+      padding: 0 10rpx;
+    }
+
+    .price {
+      line-height: 1;
+      font-size: 35rpx;
+      font-weight: bold;
+    }
+
+    .duration {
+      line-height: 1;
+      font-size: 25rpx;
+    }
   }
 } 
