--- a/miniprogram/pages/productInfo/productInfo.less
+++ b/miniprogram/pages/productInfo/productInfo.less
@@ -1,50 +1,61 @@
 .product-info {
-  margin: 150rpx 0 100rpx 0;
-  padding: 0 20rpx;
+  margin: 150rpx 0 0 0;
+  padding: 0 40rpx 200rpx 40rpx;
   background: #fff;
 
   .title {
-    font-size: 36rpx;
-    font-weight: bold;
-    margin-bottom: 30rpx;
+    font-size: 50rpx;
+    font-weight: 400;
+    margin-bottom: 50rpx;
   }
 
   .service-section {
     .section-title {
       font-size: 32rpx;
-      margin-bottom: 20rpx;
+      font-weight: 600;
+      margin-bottom: 13rpx;
     }
 
     .service-item {
+
       .item-title {
         font-size: 30rpx;
+        font-weight: 600;
         margin-bottom: 20rpx;
       }
 
       .sub-item {
         margin-bottom: 30rpx;
+        padding: 0 40rpx;
+
+        .sub-item-title-container {
+          display: flex;
+          justify-content: flex-start;
+          gap: 30rpx;
+          align-items: center;
+        }
 
         .sub-item-title {
           font-size: 28rpx;
-          font-weight: 500;
+          font-weight: 600;
           margin-bottom: 10rpx;
         }
 
         .frequency {
           display: inline-block;
-          background: #6366f1;
+          background: #4A3AFF;
           color: #fff;
-          padding: 4rpx 16rpx;
+          padding: 5rpx 30rpx;
           border-radius: 20rpx;
           font-size: 24rpx;
           margin-bottom: 10rpx;
         }
 
         .description {
-          font-size: 26rpx;
-          color: #666;
+          font-size: 28rpx;
+          color: #020202;
           line-height: 1.5;
-          margin-bottom: 10rpx;
+          margin-bottom: 30rpx;
         }
       }
     }
@@ -59,7 +70,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  padding:0 20rpx;
+  padding: 0 20rpx;
   background: #E6E8E9;
   border-top: 1rpx solid #eee;
   display: flex;
