--- a/miniprogram/pages/productInfo/productInfo.less
+++ b/miniprogram/pages/productInfo/productInfo.less
@@ -17,12 +17,26 @@
     }
 
     .service-item {
-
+      .item-title-container {
+        display: flex;
+        justify-content: flex-start;
+        gap: 30rpx;
+        align-items: center;
+        margin-bottom: 20rpx;
       .item-title {
         font-size: 30rpx;
         font-weight: 600;
-        margin-bottom: 20rpx;
       }
+        .frequency {
+          display: inline-block;
+          background: #4A3AFF;
+          color: #fff;
+          padding: 5rpx 30rpx;
+          border-radius: 20rpx;
+          font-size: 24rpx;
+        }
+      }
+
 
       .sub-item {
         margin-bottom: 30rpx;
