--- a/miniprogram/pages/productInfo/productInfo.less
+++ b/miniprogram/pages/productInfo/productInfo.less
@@ -15,6 +15,10 @@
       font-weight: 600;
       margin-bottom: 13rpx;
     }
+    .container{
+      font-size: 28rpx;
+      color: #020202;
+    }
 
     .service-item {
       .item-title-container {
