--- a/miniprogram/pages/productInfo/productInfo.wxml
+++ b/miniprogram/pages/productInfo/productInfo.wxml
@@ -3,14 +3,14 @@
 
   <view class="service-section">
     <view class="section-title">服务大类:</view>
-    
+
     <block wx:for="{{productInfo[currentId].services}}" wx:key="title">
       <view class="service-item">
         <view class="item-title-container">
           <view class="item-title">{{item.title}}</view>
           <view class="frequency" wx:if="{{item.frequency}}">{{item.frequency}}</view>
         </view>
-        
+
         <block wx:for="{{item.subServices}}" wx:for-item="subItem" wx:key="title">
           <view class="sub-item">
             <view class="sub-item-title-container" wx:if="{{subItem.title}}">
@@ -29,7 +29,19 @@
       </view>
     </block>
   </view>
-  
+
+
+</view>
+
+<view class="product-info" hover-class="none" hover-stop-propagation="false">
+  <view class="title">{{productInfo[currentId].title}}</view>
+  <view class="service-section">
+    <view class="section-title">详细内容:</view>
+    <view class="container" hover-class="none" hover-stop-propagation="false">
+      专业陪诊全程代办服务，全程协助开单、预约检查、陪同检查、领取报告、报告解读等（本服务不含医院诊疗费）不含医院收取检查费（预估2000-2500元左右）；
+
+    </view>
+  </view>
 </view>
 
 <view class="price-section">
