--- a/miniprogram/pages/healthTips/healthTips.less
+++ b/miniprogram/pages/healthTips/healthTips.less
@@ -7,14 +7,18 @@ page {
   background-image: url('https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/bg.jpeg?sign=d3381bf0a834bc64aa829e734be04a5b&t=1740662788');
   background-position: bottom center;
   background-size: 100%;
-  position: relative;
-  bottom: 0;
+  position:fixed;
+  top: 0;
+  right: 0;
+  left: 0;
   height: 300rpx;
+  z-index: 10;
 
   .back-btn {
     padding: 20rpx 30rpx;
     height: 40rpx;
-    image{
+
+    image {
       width: 40rpx;
       height: 40rpx;
     }
@@ -50,6 +54,40 @@ page {
         height: 31rpx;
       }
 
+    }
+  }
+}
+
+.tips-container {
+  margin-top: 390rpx;
+  padding: 40rpx 50rpx;
+  background: #fff;
+
+  .tip-item {
+    border-radius: 16rpx;
+    margin-bottom: 20rpx;
+    display: flex;
+    flex-direction: column;
+    gap: 18rpx;
+
+    .tip-time {
+      font-size: 20rpx;
+      color: #999;
+      margin-bottom: 10rpx;
+      font-weight: 600;
+    }
+
+    .tip-content {
+      font-size: 28rpx;
+      color: #333;
+      font-weight: 400;
+    }
+
+    .split-line {
+      width: 100%;
+      height: 1rpx;
+      padding: 0 20rpx;
+      background: #D4DCDD;
     }
   }
 }
